# robotlab_lx

./: output0318.txt  project_framework.py
.github/: LICENSE_HEADER.txt
docker/: docker-compose.yaml
scripts/reinforcement_learning/rsl_rl/: cli_args.py  play.py  play_arm_only.py  play_b2z1_0316.py  play_b2z1_ik.py  play_differential_ik_terminal.py  play_original.py  play_pink.py  play_pink_realtime.py  z1_differential_ik_terminal.py  z1_pink_ik_terminal.py
scripts/tools/: clean_trash.py  convert_mjcf.py  convert_urdf.py
source/robot_lab/data/Robots/unitree/b2_description/urdf/: b2_description_b2z1.urdf  (+1 more)
source/robot_lab/data/Robots/unitree/z1_description/: CMakeLists.txt
source/robot_lab/data/Robots/unitree/z1_description/urdf/: z1.urdf
source/robot_lab/data/Robots/unitree/z1_description/urdf/z1/configuration/: z1_physics.usd  z1_robot.usd  z1_sensor.usd
source/robot_lab/data/Robots/unitree/z1_description/xacro/: robot.xacro
source/robot_lab/data/Robots/unitree/z1_description/xacro/z1/: z1.usd
source/robot_lab/data/Robots/unitree/z1_description/xacro/z1/configuration/: z1_physics.usd  z1_robot.usd
source/robot_lab/robot_lab/: __init__.py  ui_extension_example.py
source/robot_lab/robot_lab/assets/: __init__.py  unitree.py
source/robot_lab/robot_lab/tasks/: __init__.py
source/robot_lab/robot_lab/tasks/direct/: __init__.py
source/robot_lab/robot_lab/tasks/direct/g1_amp/: __init__.py  g1_amp_env.py
source/robot_lab/robot_lab/tasks/manager_based/: __init__.py
source/robot_lab/robot_lab/tasks/manager_based/locomotion/: __init__.py
(+101 files in other folders)
